--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ src/config.h
 src/epaths.h
 src/emacs-module.h
 
+# Miscellaneous build stuf
+build-aux/
+
 # C-level sources built by 'make'.
 lib/alloca.h
 lib/byteswap.h
@@ -113,6 +116,9 @@ lisp/subdirs.el
 
 # Dependencies.
 deps/
+lib/.deps
+src/stamp-h.in
+src/stamp-h1
 
 # Logs and temporaries.
 *.log
