--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -316,3 +316,9 @@ distclean: clean
 	rm -f Makefile
 
 maintainer-clean: distclean bootstrap-clean
+
+.PHONY: check-declare
+
+check-declare:
+	$(emacs) -l check-declare \
+	  --eval '(check-declare-directory "$(srcdir)")'
