Print top time consuming tests if advised
* lisp/emacs-lisp/ert.el (ert-summarize-tests-batch-and-exit):
New argument HIGH.  Print top-running tests.

* test/Makefile.in (check-doit): Use ${SUMMARIZE_TESTS}.

* test/README: Explain SUMMARIZE_TESTS.

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -296,8 +296,8 @@ ifeq ($(TEST_INTERACTIVE), yes)
 	  $(TEST_RUN_ERT)
 else
 	-@${MAKE} -k  ${LOGFILES}
-	@$(emacs) --batch -l ert -f ert-summarize-tests-batch-and-exit ${LOGFILES}
-endif
+	@$(emacs) -l ert --eval \
+	"(ert-summarize-tests-batch-and-exit ${SUMMARIZE_TESTS})" ${LOGFILES}
 
 .PHONY: mostlyclean clean bootstrap-clean distclean maintainer-clean
 
