--- a/rust_src/Cargo.toml
+++ b/rust_src/Cargo.toml
@@ -14,6 +14,7 @@ remacs-lib = { version = "0.1.0", path = "remacs-lib" }
 remacs-macros = { version = "0.1.0", path = "remacs-macros" }
 base64 = "0.9"
 clippy = { version = "*", optional = true }
+errno = "0.2.3"
 lazy_static = "0.2.2"
 libc = "0.2"
 md5 = "0.3.5"
