Add Ubuntu Cosmic support to Docker files. (#1141)
The build succeeds. However, `make check` fails on the Rust portion.
The `miniz-sys` crate fails to compile.

--- a/docker/ubuntu/32bit/Dockerfile
+++ b/docker/ubuntu/32bit/Dockerfile
@@ -42,6 +42,8 @@ RUN apt-get update && apt-get install -y \
 ENV PATH "/root/.cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 RUN curl https://sh.rustup.rs -o rustup.sh && \
-    sh rustup.sh --default-host i686-unknown-linux-gnu --default-toolchain nightly-2018-09-09 -y && \
-    rustup default nightly-2018-09-09
+    sh rustup.sh \
+        --default-host i686-unknown-linux-gnu \
+        --default-toolchain nightly-2018-11-03 -y && \
+    rustup default nightly-2018-11-03
 
