--- a/docker/Dockerfile.in
+++ b/docker/Dockerfile.in
@@ -5,5 +5,7 @@ FROM {{distro}}
 ENV PATH "/root/.cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 RUN curl https://sh.rustup.rs -o rustup.sh && \
-    sh rustup.sh --default-host {{arch}}-unknown-linux-gnu --default-toolchain {{rust_version}} -y && \
+    sh rustup.sh \
+        --default-host {{arch}}-unknown-linux-gnu \
+        --default-toolchain {{rust_version}} -y && \
     rustup default {{rust_version}}
