--- a/rust_src/Cargo.toml
+++ b/rust_src/Cargo.toml
@@ -22,7 +22,7 @@ rand = "0.4.3"
 sha1 = "0.2.0"
 sha2 = "0.4.2"
 field-offset = "0.1.1"
-flate2 = "1.0.1"
+flate2 = { version = "1.0.1", features = ["rust_backend"], default-features = false }
 if_chain = "0.1.3"
 
 # Only want this local crate as dependency on Mac OS X
