--- a/lib-src/Makefile.in
+++ b/lib-src/Makefile.in
@@ -383,7 +383,7 @@ TAGS: etags${EXEEXT} ${tagsfiles}
 
 cargo_manifest=../rust_src/remacs-lib/Cargo.toml
 $(RUST_ARCHIVE): $(rust_srcdir)/remacs-lib/**
-	RUSTFLAGS=$(RUSTFLAGS) \
+	RUSTFLAGS="$(RUSTFLAGS)" \
 	$(CARGO_BUILD) $(CARGO_FLAGS) --manifest-path=$(cargo_manifest)
 
 remacs-libclean:
