--- a/rust_src/Cargo.toml.in
+++ b/rust_src/Cargo.toml.in
@@ -12,11 +12,12 @@ edition = "2018"
 [dependencies]
 remacs-lib = { version = "0.1.0", path = "remacs-lib" }
 remacs-macros = { version = "0.1.0", path = "remacs-macros" }
-base64 = "0.9"
+base64 = "0.10.0"
 clippy = { version = "*", optional = true }
 errno = "0.2.3"
 lazy_static = "0.2.2"
 libc = "0.2"
+line-wrap = "0.1.1"
 md5 = "0.3.5"
 rand = "0.4.3"
 sha1 = "0.2.0"
