--- a/rust_src/Cargo.toml.in
+++ b/rust_src/Cargo.toml.in
@@ -25,6 +25,7 @@ sha2 = "0.4.2"
 field-offset = "0.1.1"
 flate2 = { version = "1.0.1", features = ["rust_backend"], default-features = false }
 if_chain = "0.1.3"
+cfg-if = "0.1.6"
 
 # Only want this local crate as dependency on Mac OS X
 [target.'cfg(target_os = "macos")'.dependencies]
