--- a/rust_src/Cargo.toml.in
+++ b/rust_src/Cargo.toml.in
@@ -9,6 +9,10 @@ version = "0.1.0"
 build = "build.rs"
 edition = "2018"
 
+[workspace]
+members = ["remacs-lib", "remacs-macros", "remacs-util"]
+exclude = ["remacs-bindings", "alloc_unexecmacosx"]
+
 [dependencies]
 remacs-lib = { version = "0.1.0", path = "remacs-lib" }
 remacs-macros = { version = "0.1.0", path = "remacs-macros" }
