--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -54,7 +54,7 @@ lwlibdir = ../lwlib
 # Configuration files for .o files to depend on.
 config_h = config.h $(srcdir)/conf_post.h
 
-bootstrap_exe = ../src/bootstrap-emacs$(EXEEXT)
+bootstrap_exe = ../src/bootstrap-remacs$(EXEEXT)
 
 ## ns-app if HAVE_NS, else empty.
 OTHER_FILES = @OTHER_FILES@
@@ -309,10 +309,6 @@ REMACSLIB_CFLAGS = @REMACSLIB_CFLAGS@
 LIBSYSTEMD_LIBS = @LIBSYSTEMD_LIBS@
 LIBSYSTEMD_CFLAGS = @LIBSYSTEMD_CFLAGS@
 
-JSON_LIBS = @JSON_LIBS@
-JSON_CFLAGS = @JSON_CFLAGS@
-JSON_OBJ = @JSON_OBJ@
-
 INTERVALS_H = dispextern.h intervals.h composite.h
 
 GETLOADAVG_LIBS = @GETLOADAVG_LIBS@
@@ -381,7 +377,7 @@ EMACS_CFLAGS=-Demacs $(MYCPPFLAGS) -I. -I$(srcdir) \
   $(WEBKIT_CFLAGS) $(LCMS2_CFLAGS) \
   $(SETTINGS_CFLAGS) $(FREETYPE_CFLAGS) $(FONTCONFIG_CFLAGS) \
   $(LIBOTF_CFLAGS) $(M17N_FLT_CFLAGS) $(DEPFLAGS) \
-  $(LIBSYSTEMD_CFLAGS) $(JSON_CFLAGS) \
+  $(LIBSYSTEMD_CFLAGS) \
   $(LIBGNUTLS_CFLAGS) $(NOTIFY_CFLAGS) $(CAIRO_CFLAGS) \
   $(WERROR_CFLAGS) $(REMACSLIB_CFLAGS)
 ALL_CFLAGS = $(EMACS_CFLAGS) $(WARN_CFLAGS) $(CFLAGS)
@@ -415,8 +411,7 @@ base_obj = dispnew.o frame.o scroll.o xdisp.o menu.o $(XMENU_OBJ) window.o \
 	thread.o systhread.o \
 	$(if $(HYBRID_MALLOC),sheap.o) \
 	$(MSDOS_OBJ) $(MSDOS_X_OBJ) $(NS_OBJ) $(CYGWIN_OBJ) $(FONT_OBJ) \
-	$(W32_OBJ) $(WINDOW_SYSTEM_OBJ) $(XGSELOBJ) \
-	$(JSON_OBJ)
+	$(W32_OBJ) $(WINDOW_SYSTEM_OBJ) $(XGSELOBJ)
 obj = $(base_obj) $(NS_OBJC_OBJ)
 
 ## Object files used on some machine or other.
@@ -514,15 +509,14 @@ LIBES = $(LIBS) $(W32_LIBS) $(LIBS_GNUSTEP) $(LIBX_BASE) $(LIBIMAGE) \
    $(FREETYPE_LIBS) $(FONTCONFIG_LIBS) $(LIBOTF_LIBS) $(M17N_FLT_LIBS) \
    $(LIBGNUTLS_LIBS) $(LIB_PTHREAD) $(GETADDRINFO_A_LIBS) $(LCMS2_LIBS) \
    $(NOTIFY_LIBS) $(LIB_MATH) $(LIBZ) $(LIBMODULES) $(LIBSYSTEMD_LIBS) \
-   $(JSON_LIBS) \
    $(LIB_REMACS)
 
 ## FORCE it so that admin/unidata can decide whether these files
-## are up-to-date.  Although since charprop depends on bootstrap-emacs,
-## and emacs (which recreates bootstrap-emacs) depends on charprop,
+## are up-to-date.  Although since charprop depends on bootstrap-remacs,
+## and emacs (which recreates bootstrap-remacs) depends on charprop,
 ## in practice this rule was always run anyway.
 $(srcdir)/macuvs.h $(lispsource)/international/charprop.el: \
-  bootstrap-emacs$(EXEEXT) FORCE
+  bootstrap-remacs$(EXEEXT) FORCE
 	$(MAKE) -C ../admin/unidata all EMACS="../$(bootstrap_exe)"
 
 ## We require charprop.el to exist before ucs-normalize.el is
@@ -545,13 +539,13 @@ ${charscript}: FORCE
 
 ${lispintdir}/characters.elc: ${charscript:.el=.elc}
 
-## The dumped Emacs is as functional and more efficient than
-## bootstrap-emacs, so we replace the latter with the former.
+## The dumped Remacs is as functional and more efficient than
+## bootstrap-remacs, so we replace the latter with the former.
 ## Strictly speaking, emacs does not depend directly on all of $lisp,
 ## since not all pieces are used on all platforms.  But DOC depends
 ## on all of $lisp, and emacs depends on DOC, so it is ok to use $lisp here.
 remacs$(EXEEXT): temacs$(EXEEXT) \
-                lisp.mk $(etc)/DOC $(lisp) $(leimdir)/leim-list.el \
+                lisp.mk $(etc)/DOC $(lisp) \
                 $(lispsource)/international/charprop.el ${charsets}
 ifeq ($(CANNOT_DUMP),yes)
 	ln -f temacs$(EXEEXT) $@
@@ -561,7 +555,7 @@ else
   ifneq ($(PAXCTL_dumped),)
 	$(PAXCTL_dumped) $@
   endif
-	ln -f $@ bootstrap-emacs$(EXEEXT)
+	ln -f $@ bootstrap-remacs$(EXEEXT)
 endif
 
 ## We run make-docfile twice because the command line may get too long
@@ -691,6 +685,13 @@ ifneq ($(CANNOT_DUMP),yes)
   endif
 endif
 
+## The following oldxmenu-related rules are only (possibly) used if
+## HAVE_X11 && !USE_GTK, but there is no harm in always defining them.
+$(lwlibdir)/liblw.a: $(config_h) globals.h lisp.h FORCE
+	$(MAKE) -C $(lwlibdir) liblw.a
+$(oldXMenudir)/libXMenu11.a: FORCE
+	$(MAKE) -C $(oldXMenudir) libXMenu11.a
+
 FORCE:
 .PHONY: FORCE
 
@@ -715,13 +716,12 @@ ns-app: remacs$(EXEEXT)
 mostlyclean:
 	rm -f temacs$(EXEEXT) core *.core \#* *.o
 	rm -f ../etc/DOC
-	rm -f bootstrap-emacs$(EXEEXT) remacs-$(version)$(EXEEXT)
+	rm -f bootstrap-remacs$(EXEEXT) remacs-$(version)$(EXEEXT)
 	rm -f buildobj.h
 	rm -f globals.h gl-stamp
 	rm -f *.res *.tmp
 clean: mostlyclean
-	rm -f remacs-*.*.*$(EXEEXT) remacs$(EXEEXT)
-	-rm -rf $(DEPDIR)
+	rm -f remacs-*.*.*$(EXEEXT) remacs$(EXEEXT) $(DEPDIR)/*
 
 ## bootstrap-clean is used to clean up just before a bootstrap.
 ## It should remove all files generated during a compilation/bootstrap,
@@ -761,7 +761,7 @@ ctagsfiles2 = $(wildcard ${srcdir}/*.m)
 ## because etags "--include" only includes a pointer to the file,
 ## rather than the file contents.
 TAGS: ${ETAGS} $(ctagsfiles1) $(ctagsfiles2)
-	${ETAGS} --include=../lisp/TAGS \
+	${ETAGS} --include=../lisp/TAGS --include=$(lwlibdir)/TAGS \
 	  --regex='{c}/[ 	]*DEFVAR_[A-Z_ 	(]+"\([^"]+\)"/\1/' \
 	  --regex='{c}/[ 	]*DEFVAR_[A-Z_ 	(]+"[^"]+",[ 	]\([A-Za-z0-9_]+\)/\1/' \
 	  $(ctagsfiles1) \
@@ -774,7 +774,10 @@ TAGS: ${ETAGS} $(ctagsfiles1) $(ctagsfiles2)
 ../lisp/TAGS: FORCE
 	$(MAKE) -C ../lisp TAGS ETAGS="$(ETAGS)"
 
-tags: TAGS ../lisp/TAGS
+$(lwlibdir)/TAGS: FORCE
+	$(MAKE) -C $(lwlibdir) TAGS ETAGS="$(ETAGS)"
+
+tags: TAGS ../lisp/TAGS $(lwlibdir)/TAGS
 .PHONY: tags
 
 
@@ -787,18 +790,18 @@ tags: TAGS ../lisp/TAGS
 ## we build a new Emacs executable.
 ##
 ## (In other words, changing a single file src/foo.c would force
-## dumping a new bootstrap-emacs, then re-byte-compiling all preloaded
+## dumping a new bootstrap-remacs, then re-byte-compiling all preloaded
 ## elisp files, and only then dump the actual src/emacs, which is not
 ## wrong, but is overkill in 99.99% of the cases.)
 ##
 ## To solve the circularity, we use 2 different Emacs executables,
-## "emacs" is the main target and "bootstrap-emacs" is the one used
+## "emacs" is the main target and "bootstrap-remacs" is the one used
 ## to build the *.elc and loaddefs.el files.
 ## To solve the freshness issue, in the past we tried various clever tricks,
 ## but now that we require GNU make, we can simply specify
-## bootstrap-emacs$(EXEEXT) as an order-only prerequisite.
+## bootstrap-remacs$(EXEEXT) as an order-only prerequisite.
 
-%.elc: %.el | bootstrap-emacs$(EXEEXT)
+%.elc: %.el | bootstrap-remacs$(EXEEXT)
 	@$(MAKE) -C ../lisp EMACS="$(bootstrap_exe)" THEFILE=$< $<c
 
 ## VCSWITNESS points to the file that holds info about the current checkout.
@@ -806,21 +809,21 @@ tags: TAGS ../lisp/TAGS
 ## If empty it is ignored; the parent makefile can set it to some other value.
 VCSWITNESS =
 
-$(lispsource)/loaddefs.el: $(VCSWITNESS) | bootstrap-emacs$(EXEEXT)
+$(lispsource)/loaddefs.el: $(VCSWITNESS) | bootstrap-remacs$(EXEEXT)
 	$(MAKE) -C ../lisp autoloads EMACS="$(bootstrap_exe)"
 
-## Dump an Emacs executable named bootstrap-emacs containing the
+## Dump an Emacs executable named bootstrap-remacs containing the
 ## files from loadup.el in source form.
-bootstrap-emacs$(EXEEXT): temacs$(EXEEXT)
+bootstrap-remacs$(EXEEXT): temacs$(EXEEXT)
 	$(MAKE) -C ../lisp update-subdirs
 ifeq ($(CANNOT_DUMP),yes)
 	ln -f temacs$(EXEEXT) $@
 else
 	unset EMACS_HEAP_EXEC; \
 	$(RUN_TEMACS) --batch $(BUILD_DETAILS) --load loadup bootstrap
-  ifneq ($(PAXCTL_dumped),)
-	$(PAXCTL_dumped) remacs$(EXEEXT)
-  endif
+	ifneq ($(PAXCTL_dumped),)
+		$(PAXCTL_dumped) remacs$(EXEEXT)
+	endif
 	mv -f remacs$(EXEEXT) $@
 endif
 	@: Compile some files earlier to speed up further compilation.
