--- a/configure.ac
+++ b/configure.ac
@@ -4270,6 +4270,9 @@ dnl Note that we cannot rely on PATH_SEPARATOR, as that one will always
 dnl be computed as ':' in MSYS Bash.
 AC_SUBST(SEPCHAR)
 
+dnl Everybody supports this.
+AC_DEFINE(subprocesses, 1, [Define to enable asynchronous subprocesses.])
+
 AC_DEFINE(USER_FULL_NAME, [pw->pw_gecos], [How to get a user's full name.])
 
 
